--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                         >
                             <li>
                                 <a
-                                    href="index.html"
+                                    href="#"
                                     class="block py-2 pl-3 pr-4 text-white bg-purple-700 rounded lg:bg-transparent lg:text-purple-700 lg:p-0 dark:text-white"
                                     aria-current="page"
                                     >Home</a
@@ -121,7 +121,7 @@
                             </li>
                             <li>
                                 <a
-                                    href="team.html"
+                                    href="#"
                                     class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"
                                     >Team</a
                                 >
