--- a/index.html
+++ b/index.html
@@ -153,28 +153,10 @@
                         providing them with a healthier commuting experience.
                         This device will be a game-changer for commuters in all
                         parts of the country.
-
-                        <a
-                            href="https://tailwindcss.com"
-                            class="hover:underline"
-                            >Tailwind CSS</a
-                        >
-                        and based on the components from the
-                        <a
-                            href="https://flowbite.com/docs/getting-started/introduction/"
-                            class="hover:underline"
-                            >Flowbite Library</a
-                        >
-                        and the
-                        <a
-                            href="https://flowbite.com/blocks/"
-                            class="hover:underline"
-                            >Blocks System</a
-                        >.
                     </p>
                     <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
                         <a
-                            href="https://github.com/themesberg/landwind"
+                            href="https://youtu.be/QUAsKLkTPus"
                             class="inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-gray-900 border border-gray-200 rounded-lg sm:w-auto hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800"
                         >
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPuJxaPIWJT4qdma0OwtXhJwS6dy--hYD6ab52Et0RNG29qwepYVPKR1kIKxgNR4ibDic&usqp=CAU" alt="" style="width: 40px; height: auto; padding-right: 10px;">
