--- a/team.html
+++ b/team.html
@@ -149,14 +149,14 @@
                     <!-- Team Member Card 2 -->
                     <div class="bg-white p-6 rounded-lg shadow-lg text-center">
                         <img src="./img/aditya2.png" alt="Team Member" class="w-32 h-32 mx-auto rounded-full mb-4">
-                        <h3 class="text-xl font-semibold text-gray-800">Aditya Goyal</h3>
+                        <h3 class="text-xl font-semibold text-gray-800">Aaditya Goyal</h3>
                         <p class="text-gray-500">Roll No: 102108174</p>
                     </div>
                     
                     <!-- Team Member Card 3 -->
                     <div class="bg-white p-6 rounded-lg shadow-lg text-center">
                         <img src="./img/samyak.png" alt="Team Member" class="w-32 h-32 mx-auto rounded-full mb-4">
-                        <h3 class="text-xl font-semibold text-gray-800">Samyak Mishra</h3>
+                        <h3 class="text-xl font-semibold text-gray-800">Samyak Kumar Mishra</h3>
                         <p class="text-gray-500">Roll No: 102108151</p>
                     </div>
                     
